
install( FILES
KDE_Event_Error_Critial.ogg
KDE_Event_Error.ogg
KDE_Event_Error_Printing.ogg
KDE_Event_Error_Serious.ogg
KDE_Event_Error_VerySerious.ogg
KDE_Event_File_Open_Foes.ogg
KDE_Event_List_End.ogg
KDE_Event_List_Multiple_Match.ogg
KDE_Event_List_NoMatch.ogg
KDE_Event_Message.ogg
KDE_Event_Question.ogg
KDE_Event_Special.ogg
KDE_Im_Cant_Connect.ogg
KDE_Im_Connection_lost.ogg
KDE_Im_Contact_in.ogg
KDE_Im_Contact_out.ogg
KDE_Im_Error_on_Connection.ogg
KDE_Im_Highlight_Msg.ogg
KDE_Im_Internal_Error.ogg
KDE_Im_Irc_Event.ogg
KDE_Im_Low_Priority_Message.ogg
KDE_Im_Message_In.ogg
KDE_Im_Message_Out.ogg
KDE_Im_Network_Problems.ogg
KDE_Im_New_Mail.ogg
KDE_Im_Nudge.ogg
KDE_Im_User_Auth.ogg
KDE_K3B_Finish_Error.ogg
KDE_K3B_Finish_Success.ogg
KDE_K3B_Insert_Medium.ogg
KDE_Sys_Log_in_Long.ogg
KDE_Sys_Log_In.ogg
KDE_Sys_Log_in_Short.ogg
KDE_Sys_Log_Out.ogg
KDE_Sys_Trash_Wmptied.ogg
KDE_Sys_Warning.ogg
KDE_Window_All_Desktops_Not.ogg
KDE_Window_All_Desktops.ogg
KDE_Window_Close.ogg
KDE_Window_Dhade_Up.ogg
KDE_Window_Maximize.ogg
KDE_Window_Minimize.ogg
KDE_Window_Move.ogg
KDE_Window_Move_Stop.ogg
KDE_Window_Shade_Down.ogg

   DESTINATION  ${SOUND_INSTALL_DIR} )



